<resources>
    <string name="app_name">Screen Savers</string>

    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="clear">Clear Screen</string>

    <!-- Screen Savers -->
    <string name="colorShifter">Color Shifter</string>
    <string name="randomLines">Random Lines</string>
    <string name="straightLines">Straight Lines</string>
    <string name="circles">Circles</string>

</resources>
