<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/displayArea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RandomLines">

    <ImageView
        android:id="@+id/drawingArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="Canvas" />

    <LinearLayout
        android:id="@+id/controlPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#ff000000"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/slow"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/fast"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

        </RelativeLayout>

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:max="300"
            android:padding="0dp"
            android:progress="100"
            android:progressBackgroundTint="#A3A3A3"
            android:progressTint="#ffffff"
            android:thumbTint="#ffffff" />

        <TextView
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/clear"
            android:textColor="#ffffffff"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

    </LinearLayout>


</RelativeLayout>