<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#DFDFDF" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="italic|bold" />

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp"
            android:layout_margin="0dp">

            <!-- Row 1 : Color Shifter, Random Lines -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="0dp">

                <!-- Col 1 : Color Shifter -->
                <LinearLayout
                    android:id="@+id/colorShifterBox"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:padding="0dp">

                    <fragment
                        android:id="@+id/colorShifterFragment"
                        class="in.kashewdevelopers.screensavers.Fragments.ColorShifterFragment"
                        android:layout_width="match_parent"
                        android:layout_height="160dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#969494" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="#ffffff"
                        android:gravity="center"
                        android:text="@string/colorShifter"
                        android:textColor="#000000"
                        android:textSize="17sp"
                        android:textStyle="bold|italic" />

                </LinearLayout>

                <!-- Col 2 : Random Lines -->
                <LinearLayout
                    android:id="@+id/randomLinesBox"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:padding="0dp">

                    <fragment
                        android:id="@+id/randomLinesFragment"
                        class="in.kashewdevelopers.screensavers.Fragments.RandomLinesFragment"
                        android:layout_width="match_parent"
                        android:layout_height="160dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#969494" />

                    <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:text="@string/randomLines"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="bold|italic" />

                </LinearLayout>

            </LinearLayout>

            <!-- Row 2 : Straight Lines -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="0dp">

                <!-- Col 1 : Straight Lines -->
                <LinearLayout
                    android:id="@+id/straightLinesBox"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:padding="0dp">

                    <fragment
                        android:id="@+id/straightLinesFragment"
                        class="in.kashewdevelopers.screensavers.Fragments.StraightLinesFragment"
                        android:layout_width="match_parent"
                        android:layout_height="160dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#969494" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="#ffffff"
                        android:gravity="center"
                        android:text="@string/straightLines"
                        android:textColor="#000000"
                        android:textSize="17sp"
                        android:textStyle="bold|italic" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>